[gd_scene load_steps=5 format=3 uid="uid://bqk78maoeqp8o"]

[ext_resource type="Script" uid="uid://ki44y1srpxkp" path="res://scenes/game_ui/game_ui.gd" id="1_1i64n"]
[ext_resource type="LabelSettings" uid="uid://eqev7fqyurr4" path="res://resources/ui_label_text.tres" id="1_sq0em"]
[ext_resource type="Texture2D" uid="uid://btcfnsroei257" path="res://assets/ui/red_button_square_depth_flat.png" id="3_najyh"]
[ext_resource type="LabelSettings" uid="uid://bc2ekh323p7jm" path="res://resources/level_complete_text.tres" id="4_2cwxn"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1i64n")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Level"
label_settings = ExtResource("1_sq0em")
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="MC/VB/HB"]
layout_mode = 2
text = "99 "
label_settings = ExtResource("1_sq0em")
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Moves"
label_settings = ExtResource("1_sq0em")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="MC/VB/HB2"]
layout_mode = 2
text = "99 "
label_settings = ExtResource("1_sq0em")
vertical_alignment = 1

[node name="HB3" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Best"
label_settings = ExtResource("1_sq0em")
vertical_alignment = 1

[node name="BestLabel" type="Label" parent="MC/VB/HB3"]
layout_mode = 2
text = "-"
label_settings = ExtResource("1_sq0em")
vertical_alignment = 1

[node name="GameOverNPR" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -130.0
offset_right = 280.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_najyh")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 20

[node name="MC" type="MarginContainer" parent="GameOverNPR"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VB" type="VBoxContainer" parent="GameOverNPR/MC"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="GameOverNPR/MC/VB"]
layout_mode = 2
text = "Level Complete!"
label_settings = ExtResource("4_2cwxn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB" type="VBoxContainer" parent="GameOverNPR/MC/VB"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="MovesLabel" type="Label" parent="GameOverNPR/MC/VB/VB"]
layout_mode = 2
text = "You took ### moves"
label_settings = ExtResource("1_sq0em")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecordLabel" type="Label" parent="GameOverNPR/MC/VB/VB"]
visible = false
layout_mode = 2
text = "A new Record!"
label_settings = ExtResource("1_sq0em")
horizontal_alignment = 1
vertical_alignment = 1
